--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
   </head>
   <body>
     <div id="main">
-      <h1>Itachi Uchiha</h1>
-      <br>
-        <h2>(God of Genjutsu )</h2>
+       <nav>
+        <img src="Itachi/Sharingan.png" alt="" />
+        <ul>
+          <li><a href="#">Uchiha</a></li>
+          <li><a href="#">Hidden Leaf</a></li>
+          <li><a href="#">Susanoo</a></li>
+          <li><a href="#">Contact Uchiha</a></li>
+        </ul>
+      </nav>
+       <div class="contant">
+        <h1>Itachi Uchiha <span>(God of Genjutsu)</span></h1>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
